[package]
name = "nedry"
version = "0.1.0"
edition = "2021"
authors = ["kaiyo hugo"]
readme = "README.md"
license = "MIT"
repository = "github.com/kaiYOHUGO/nedry"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["cli", "generator", "bundler"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
lang-c = "0.15.1"


[dependencies.clap]
version = "4.5.3"
features = ["derive"]
