[package]
name = "nedry"
description = "Small bundler for C"
version = "0.1.0"
edition = "2021"
authors = ["kaiyo hugo"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kAIYOHUGO/Nedry"
categories = ["command-line-utilities", "development-tools::build-utils"]
keywords = ["cli", "generator", "bundler"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nedry"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
anyhow = "1.0.81"
# lang-c = "0.15.1"


[dependencies.clap]
version = "4.5.3"
features = ["derive"]
